--- a/iot/iot-fog/frontend/index.html
+++ b/iot/iot-fog/frontend/index.html
@@ -1,47 +1,124 @@
-<!DOCTYPE html> <html lang="es"> <head>
+<!DOCTYPE html>
+<html lang="es">
+<head>
   <meta charset="UTF-8">
-  <title>Acceder con Token - IoT Platform</title>
-  <link rel="stylesheet" href="css/styles.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Login | IoT Platform - Universidad ECCI</title>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+  <style>
+    :root {
+      --color-azul: #0033A0;
+      --color-amarillo: #FFD100;
+      --color-rojo: #E03A3E;
+      --color-blanco: #ffffff;
+    }
+    * { box-sizing: border-box; margin: 0; padding: 0; }
+    body, html {
+      height: 100%;
+      font-family: 'Roboto', sans-serif;
+    }
+    body {
+      background: url('https://econtinuada.ecci.edu.co/aulas/pluginfile.php/90116/coursecat/description/FondoECCI.jpg') no-repeat center/cover;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      background-attachment: fixed;
+    }
+    .login-container {
+      background: rgba(255,255,255,0.9);
+      padding: 2rem;
+      border-radius: 8px;
+      width: 350px;
+      box-shadow: 0 4px 15px rgba(0,0,0,0.2);
+      text-align: center;
+    }
+    .login-container h2 {
+      color: var(--color-azul);
+      margin-bottom: 1rem;
+      font-weight: 500;
+    }
+    .login-container input {
+      width: 100%;
+      padding: 0.7rem;
+      margin-bottom: 1rem;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+      font-size: 1rem;
+    }
+    .login-container button {
+      width: 100%;
+      padding: 0.7rem;
+      background: var(--color-amarillo);
+      border: none;
+      border-radius: 4px;
+      color: var(--color-azul);
+      font-size: 1rem;
+      font-weight: 500;
+      cursor: pointer;
+      transition: background 0.3s ease;
+    }
+    .login-container button:hover {
+      background: #ffec85;
+    }
+  </style>
 </head>
 <body>
-  <div class="container">
-    <h2>Inicio de sesión con token</h2>
+  <div class="login-container">
+    <h2>Bienvenido a ECCI IoT</h2>
 
-    <input type="text" id="token" placeholder="Ingresa tu token">
-    <button onclick="accederConToken()">Iniciar Sesión</button>
+    <input type="text" id="username" placeholder="Usuario">
+    <input type="password" id="password" placeholder="Contraseña">
+    <button onclick="iniciarSesion()">Iniciar Sesión</button>
 
     <p>
-      <a href="recuperar.html">¿Olvidaste tu token?</a>
+      <a href="recuperar.html">¿Desea Registrarse?</a>
     </p>
     <p id="mensaje" style="color: red;"></p>
   </div>
 
   <script>
-    async function accederConToken() {
-      const token = document.getElementById("token").value.trim();
+    async function iniciarSesion() {
+      const usuario = document.getElementById("username").value.trim();
+      const contrasena = document.getElementById("password").value.trim();
       const mensaje = document.getElementById("mensaje");
 
-	if (!token) {
-		mensaje.textContent = "Debes ingresar un token"; 
-	return;
-	}
-	try {
-		const res = await fetch("http://3.16.48.213:8000/profile", {
-			headers: { "Authorization": "Bearer " + token }
-		});
+      mensaje.textContent = ""; // Limpiar mensaje anterior
 
-		if (res.ok) {
-			localStorage.setItem("token", token);
-			window.location.href = "dashboard.html";
-		} else {
-			mensaje.textContent = "Token inválido o expirado";
-		}
-	} catch (err) {
-		console.error("Error validando token:", err);
-		mensaje.textContent = "Error al conectar con el servidor";
-	}
-}
+      if (!usuario || !contrasena) {
+        mensaje.textContent = "Completa todos los campos";
+        return;
+      }
 
+      try {
+        const res = await fetch("http://3.16.48.213:8000/login", {
+          method: "POST",
+          headers: {
+            "Content-Type": "application/x-www-form-urlencoded"
+          },
+          body: new URLSearchParams({
+            username: usuario,
+            password: contrasena
+          })
+        });
+
+        const data = await res.json();
+
+        if (!res.ok) {
+          mensaje.textContent = data.detail || "Credenciales incorrectas";
+          return;
+        }
+
+        // Guardar token y usuario
+        localStorage.setItem("token", data.access_token);
+        localStorage.setItem("mqttUser", usuario);
+
+        // Redirigir al dashboard
+        window.location.href = "dashboard.html";
+      } catch (error) {
+        console.error("Error al conectar con el servidor:", error);
+        mensaje.textContent = "Error de red. Verifica tu conexión o intenta más tarde.";
+      }
+    }
   </script>
 </body>
 </html>
